[feat] Implement API Update Deck
